--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="section">
         <div class="row">
-            {% for upload in uploads  %}
+            {% for upload in uploads %}
             {% if session.client|lower == upload.uploaded_by|lower %}
             <div class="col s12 m6 l4">
                 <div class="card hoverable">
@@ -28,25 +28,41 @@
                         <p><i class="material-icons prefix red-text tex-darken-3 left">toys</i>{{ upload.necessities
                             }}
                         </p>
-                        <p><i class="material-icons prefix red-text tex-darken-3 left">library_books</i>{{ upload.description
+                        <p><i class="material-icons prefix red-text tex-darken-3 left">library_books</i>{{
+                            upload.description
                             }}
                         </p>
                         <p><i class="material-icons prefix red-text tex-darken-3 left">school</i>{{
                             upload.activity_outcome }}
                         </p>
                         <p><em>by: {{ upload.uploaded_by }}</em></p>
-                        <a href="#{{ upload_id }}"
+                        <a href="#{{ upload._id }}"
                             class="modal-trigger waves-effect waves-light btn red tex-darken-3">Remove</a>
                         <a href="{{ url_for('update_activity', activity_id=upload._id) }}"
                             class="waves-effect waves-light btn">Update</a>
-                        
+
                     </div>
                 </div>
             </div>
+               <!-- Modal -->
+                <div id="{{ upload._id }}" class="modal">
+                    <div class="modal-content">
+                        <h4>Are you sure you want to delete activity?</h4>
+                        <p>Activity will be deleted permanently.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="{{ url_for('remove_activity', activity_id=upload._id) }}"
+                            class="modal-close waves-effect waves-green btn-flat"> Delete</a>
+                        <a href="{{ url_for('welcome', username=session['client']) }}" class="modal-close waves-effect waves-green btn-flat">
+                            Do not Delete</a>
+                    </div>
+                </div>
             {% endif %}
             {% endfor %}
         </div>
     </div>
+
+ 
 </div>
 
 
