--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,3 +55,40 @@ font-size: 1.5rem!important;
     text-transform: capitalize;
     color: #0171c0;
 }
+
+.search-container {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background:#B71C1C;
+    height: 40px; 
+    border-radius: 40px;
+    padding: 10px;
+    transition: all ease-in-out 0.6s;
+}
+.search-container:hover {
+    width: 500px;
+    transition: all ease-in-out 0.6s;
+}
+
+input.search-text {
+    border-bottom: none!important;
+    width: 80%!important;
+    height: 26px!important;
+    padding: 0;
+    color: white;
+    font-size: 16px;
+    transition: 0.4s;
+    line-height: 40px;
+}
+.search-button{
+    float: right;
+    width: 40px;
+    border-radius: 50%;
+    background:#B71C1C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
