--- a/templates/activities.html
+++ b/templates/activities.html
@@ -1,10 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="row col s12 center-align">
+<div class="row col s12 center-align container">
   <h3 class="center-align">Add Activity</h3>
-  <a class="btn-floating btn-large waves-effect waves-light pulse red darken-4" href="{{ url_for('upload')}}">
-    <i class="material-icons">add</i></a>
+  <div class="search-container waves-effect waves-light red darken-4">
+    <input type="text" name="search" class="search-text " placeholder="Search Activities...">
+    <a href="#" class="search-button"><i class="material-icons ">search</i></a>
+
+  </div>
+  <a class=" btn-floating btn-large waves-effect waves-light pulse red darken-4 right" href="{{ url_for('upload')}}">
+    <i class="material-icons ">add</i></a>
 </div>
 
 <div class="container">
@@ -42,26 +47,26 @@
               class="waves-effect waves-light btn">Update</a>
             {% endif %}
 
-            </div>
           </div>
         </div>
-        <!-- Modal Structure -->
-        <div id="{{ activity._id }}" class="modal">
-          <div class="modal-content">
-            <h4>Are you sure you want to delete activity?</h4>
-            <p>Activity will be deleted permanently.</p>
-          </div>
-          <div class="modal-footer">
-            <a href="{{ url_for('remove_activity', activity_id=activity._id) }}"
-              class="modal-close waves-effect waves-green btn-flat"> Delete</a>
-            <a href="{{ url_for('get_activities') }}" class="modal-close waves-effect waves-green btn-flat">
-              Do not Delete</a>
-          </div>
-        </div>
-        {% endfor %}
       </div>
+      <!-- Modal Structure -->
+      <div id="{{ activity._id }}" class="modal">
+        <div class="modal-content">
+          <h4>Are you sure you want to delete activity?</h4>
+          <p>Activity will be deleted permanently.</p>
+        </div>
+        <div class="modal-footer">
+          <a href="{{ url_for('remove_activity', activity_id=activity._id) }}"
+            class="modal-close waves-effect waves-green btn-flat"> Delete</a>
+          <a href="{{ url_for('get_activities') }}" class="modal-close waves-effect waves-green btn-flat">
+            Do not Delete</a>
+        </div>
+      </div>
+      {% endfor %}
     </div>
   </div>
+</div>
 
 
-  {% endblock %}
+{% endblock %}
