--- a/templates/activities.html
+++ b/templates/activities.html
@@ -2,15 +2,29 @@
 {% block content %}
 
 <div class="row col s12 center-align container">
-  <h3 class="center-align">Add Activity</h3>
-  <div class="search-container waves-effect waves-light red darken-4">
-    <input type="text" name="search" class="search-text " placeholder="Search Activities...">
-    <a href="#" class="search-button"><i class="material-icons ">search</i></a>
-
-  </div>
-  <a class=" btn-floating btn-large waves-effect waves-light pulse red darken-4 right" href="{{ url_for('upload')}}">
-    <i class="material-icons ">add</i></a>
+    <h3 class="center-align"> Activities</h3>
+      <div class="row card-panel">
+           <form action="#" method="post" class="col s12">
+                   <div class="row valign-wrapper center-align">
+                         <div class="input-field col s12 m8">
+                                <input type="text" name="query" id="query" minlength="3" placeholder="Type Activity ..."
+                                    class="validate" required>
+                                <label for="query">Search Activities</label>
+                          </div>
+                             <div class="row col s2 m4">
+                                  <button type="submit" class="btn-floating btn-large blue btn"><i class="material-icons">search</i>
+                                  
+                                  </button>
+                                   <a href="#" class="btn-floating btn-large red btn"><i class="material-icons">restart_alt</i></a>  
+                                  <a class=" btn-floating btn-large waves-effect waves-light pulse red darken-4" href="{{ url_for('upload')}}"><i
+                                      class="material-icons ">add</i></a>
+                            </div>
+                     </div>
+              </form>
+          </div>
+      </div>
 </div>
+
 
 <div class="container">
   <div class="section">
